--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean verify -Dtestng.dtd.http=true
+      run: mvn clean verify -X -Dtestng.dtd.http=true
