--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,11 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
 </dependency>
-
+<dependency>
+  <groupId>org.projectlombok</groupId>
+  <artifactId>lombok</artifactId>
+  <version>1.18.22</version>
+</dependency>
 
   </dependencies>
 </project>
