--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean verify -Dtestng.dtd.http=true
-    - name: Deploy pages
-      uses: JamesIves/github-pages-deploy-action@4.1.5
+    - name: Deploy report page to GitHub Page
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages
-        folder: ./test-output/SparkReport
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./test-output/SparkReport
