--- a/.github/workflows/maven1.yml
+++ b/.github/workflows/maven1.yml
@@ -29,3 +29,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean verify -Dtestng.dtd.http=true
+      
+    - name: Deploy report page to GitHub Page
+      uses: peaceiris/actions-gh-pages@v3
+      with: 
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./test-output/SparkReport
