--- a/.github/workflows/maven1.yml
+++ b/.github/workflows/maven1.yml
@@ -34,4 +34,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./test-output/SparkReport
+        publish_dir: /test-output/Execution reports/ExtentSpark.html
