--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,10 +28,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean verify -Dtestng.dtd.http=true
+      run: mvn clean test #-Dtestng.dtd.http=true
       
-    - name: Deploy report page to GitHub Page
-      uses: peaceiris/actions-gh-pages@v3
-      with: 
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: /test-output/Execution reports/ExtentSpark.html
+#    - name: Deploy report page to GitHub Page
+#      uses: peaceiris/actions-gh-pages@v3
+#      with: 
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        publish_dir: /test-output/Execution reports/ExtentSpark.html
